--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+.add {
+    border-style: solid;
+    border-width: 10px;
+    border-color: orange black red transparent;
+    padding: 20px;
+    border-radius: 10%;
+}
+
