--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,5 @@
 <app-transa *ngIf="showForm == 2"  (value)="handleChildData($event)" ></app-transa>
 
 <app-acquirer *ngIf="showForm == 3"  (value)="handleChildData($event)" ></app-acquirer>
+
+<app-iso-message-display *ngIf="showForm == 4"  (value)="handleChildData($event)" ></app-iso-message-display>
